# Devdesk

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  project-creation-index.html  svelte.config.js  tsconfig.json  vite.config.ts  welcome.html
.github/workflows/: release-build.yml
public/: global.css  index.html
src/: App.svelte  app.css  lib.rs  main.ts  store.ts
src-tauri/: Cargo.toml  db.sqlite3  tauri.conf.json
src-tauri/icons/: icon.icns  icon_edit_file.vectr
src-tauri/src/: api.rs  app_windows.rs  cmd_api.rs  db_api.rs  files_api.rs  lib.rs  main.rs  settings_api.rs  state.rs  state_api.rs  stats_api.rs  window_ext.rs
src-tauri/src/core/: commands.rs  database.rs  mod.rs  models.rs  sql_library.rs  types.rs
src-tauri/src/core/commands/: custom.rs  defaults.rs  mod.rs  prebuild.rs  tests.rs
src-tauri/src/core/database/: mod.rs  sql_library.rs  tests.rs  types_db_interface.rs
src-tauri/src/core/filesystem/: configtree.rs  defaults.rs  mod.rs  runner.rs  utils.rs
src-tauri/src/core/settings/: mod.rs  utils.rs
src-tauri/src/fs_runner/: mod.rs
src-tauri/src/glue/: mod.rs  tauri_commands.rs
src/Components/: ContentPanel.svelte  Credits.svelte  HeaderComponent.svelte  LanguageStatsComponent.svelte  LeftPanel.svelte  NewProjectButtonComponent.svelte  NewProjectComponent.svelte  NewProjectView.svelte  PortfolioDisplayView.svelte  PortfolioItem.svelte  PortfolioView.svelte  ProjectView.svelte  ScrollBarComponent.svelte  SettingsView.svelte  SubdirList.svelte  TextSearchComponent.svelte  TopBar.svelte  VaultTagList.svelte
src/Portfolio/: PortfolioDisplayView.svelte
src/Project/: ProjectCreateView.svelte  ProjectDisplayView.svelte  ProjectTileView.svelte
src/Settings/: SettingsDisplayView.svelte
src/Utils/: ComponentStateController.ts  Data.ts  Database.ts  Path.ts  Portfolio.ts  Project.ts  Result.ts  ScrollBarComponent.svelte  Settings.ts  Stats.ts  ViewModel.ts  scripts.ts
src/core/: mod.rs  sql_library.rs  types.rs
src/desk/: App.svelte  main.ts
src/fs_runner/: mod.rs
src/utils/: deskapi.ts  formatter.ts  types.ts
src/welcome/: App.svelte
(+39 files in other folders)
