[package]
name = "devdesk"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "devdesk"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = ["dialog-open", "path-all", "window-all"] }
shellwords = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenv = "0.15"
chrono = "0.4"
open = "3"
lazy_static = "1.4"
zip = "0.6.4"
walkdir = "2"
glob = "0.3"
async-recursion = "1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
